--- a/.gitignore
+++ b/.gitignore
@@ -5,21 +5,15 @@ yarn-debug.log*
 yarn-error.log*
 
 # Production builds
-/build
-/dist
+fitness-tracker/build/
+server/dist/
 
-# Environment variables (CRITICAL - contains API keys)
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
 
 # OS generated files
 .DS_Store
@@ -29,6 +23,12 @@ yarn-error.log*
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
 
 # Logs
 logs
@@ -42,6 +42,10 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
+
+# Temporary folders
+tmp/
+temp/
 
 # nyc test coverage
 .nyc_output
